--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Shopify PHP (Guzzle) API Wrapper",
     "type": "library",
     "license": "MIT",
-    "version": "1.1.1",
+    "version": "1.1.2",
     "homepage": "http://www.shopifyextras.com",
     "authors": [
         {
@@ -16,8 +16,9 @@
     },
     "require": {
         "php": ">=5.4",
-        "guzzlehttp/guzzle": "~5.0.3",
-        "guzzlehttp/guzzle-services": "~0.4"
+        "guzzlehttp/guzzle": "~5.3|~6.0",
+        "guzzlehttp/guzzle-services": "0.5.0",
+        "guzzlehttp/command": "0.7.0"
     },
     "autoload": {
         "psr-4": {
