--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "shopifyextras/shopify-php-api-wrapper",
+    "name": "culturekings/shopify-php-api-wrapper",
     "description": "Shopify PHP (Guzzle) API Wrapper",
     "type": "library",
     "license": "MIT",
@@ -16,7 +16,7 @@
     },
     "require": {
         "php": ">=5.4",
-        "guzzlehttp/guzzle": "~5.3|~6.0",
+        "guzzlehttp/guzzle": "~5.3",
         "guzzlehttp/guzzle-services": "0.5.0",
         "guzzlehttp/command": "0.7.0"
     },
