--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require": {
         "php": ">=5.4",
-        "guzzlehttp/guzzle": "~5.3",
+        "guzzlehttp/guzzle": "5.3.0",
         "guzzlehttp/guzzle-services": "0.5.0",
         "guzzlehttp/command": "0.7.0"
     },
