--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "php": ">=5.4",
         "guzzlehttp/guzzle": "~5.3|~6.0",
         "guzzlehttp/guzzle-services": "0.5.0",
-        "guzzlehttp/command": "0.7.0"
+        "guzzlehttp/command": "~1.0"
     },
     "autoload": {
         "psr-4": {
