--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "php": ">=5.4",
         "guzzlehttp/guzzle": "~5.3|~6.0",
-        "guzzlehttp/guzzle-services": "0.5.0",
+        "guzzlehttp/guzzle-services": "~1.0",
         "guzzlehttp/command": "~1.0"
     },
     "autoload": {
