--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     "require": {
         "php": ">=5.4",
         "guzzlehttp/guzzle": "~5.3|~6.0",
-        "guzzlehttp/guzzle-services": "0.5.0",
-        "guzzlehttp/command": "0.7.0"
+        "guzzlehttp/guzzle-services": "0.5.0|0.6.0",
+        "guzzlehttp/command": "0.7.0|0.7.1"
     },
     "autoload": {
         "psr-4": {
